src/styles/main.scss
$red: #d44136;
$red--dark: #bb3127;
$red--bg: #d6aca833;
$black: #3d352c;
$black--light: rgba(0,0,0,0.7);
$light: #f5f5f5;

$card-padding: 50px;

body {
  margin: 0;  
  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
  color: $black;
}

.fluid {
  max-width: 100%;
  height: auto;
}

.flex {
  display: flex;
  flex-wrap: wrap;
  justify-content: space-between;
  // align-items: flex-start;
}
.flex__item {
  flex-grow: 1;  
}

small {
  color: $red--dark;    
  font-style: normal;
  font-family: 'Courier New', Courier, monospace;
}

.success {    
  box-shadow: 0 0.938em 2.188em rgba(50,50,93,.1), 0 0.313em 0.938em rgba(0,0,0,.07);
  margin-top: 20px;
  padding: 50px 0;

  text-align: center;
}

.container {
  max-width: 920px;
  margin: 0 auto;
  padding: 0 15px;
}

.text {
  &__title {
    margin: 0;
    margin-top: 0;
    font-size: 2em;
    text-transform: uppercase;
  }
  &--space {
    margin: 50px 0;
  }
  &--red {
    color: $red;  
  }  
}  

.form {
  // outline: 1px solid red;  
  padding-top: 20px;
  padding-bottom: 50px;
  display: flex;
  flex-direction: column;
}
.form__item {  
  // outline: 1px solid green;     
  label {        
    display: block;        
    margin-bottom: .5rem;
    color: $black--light;
  }
  input,
  textarea {
    font-size: 18px;  
    box-sizing: border-box;     
    width: 100%;
    display: block;
    padding: 10px;
    border: none;
    background: $light;
    // border-bottom: 1px solid $red--bg;
  }
  .btn {    
    position: relative;
    cursor: pointer;
    justify-self: center;
    display: block;
    border: none;
    margin-top: 1rem;
    padding: 14px;
    font-size: 18px;
    height: 100%;
    width: 100%;    
    grid-area: 1 / span 2;    
  }
}

.btn {
  position: relative;
  display: inline-block;
  font-size: 12px;
  text-decoration: none;
  padding: 5px 10px;
  background: $red--bg;
  letter-spacing: 1px;
  color: $red--dark;
  transition: all 400ms ease;
  &--big {
    padding: 10px 20px;
    letter-spacing: 2px;
  }
  &:before {
    content: "";
    position: absolute;        
    z-index: -2; 
    left: 0;
    top: 0;
    height: 100%;    
    width: 0;
    background: $red;
    transition: all 200ms ease;
  }
  &:hover {
    color: white;
    small {
      transition: all 400ms ease;
      color: white;
    }
    &:before {    
      width: 100%;
    } 
  }
}

.header {  
  // outline: 1px dashed blue;
  margin: 0 auto;    
  display: grid;
  grid-template-columns:  1fr 510px;
  .btn {
    margin-left: 1rem;
  }
  &__title {    
    // outline: 1px dashed blueviolet;s
    position: relative;        
    border-right: 12px solid $red;    
    writing-mode: vertical-rl;    
    transform: rotate(180deg);
  }  
  &__content {    
    padding: 16vh 0;     
    letter-spacing: 2px;
    font-size: 24px;    
    margin-right: 0;    
    text-align: right;
  }
}

.card {
  display: flex;    
  margin-bottom: 5rem;  
  div {
    flex: 50%;
  }
  small {
    color: $red--dark;    
    font-style: normal;
    font-family: 'Courier New', Courier, monospace;
  }
  .btn {
    margin-top: 0.5rem;
    margin-left: .35rem;
  }
  &__content {
    padding-left: $card-padding;
    text-align: right;
    p {
      line-height: 145%;
      color: $black--light;
    }    
    h3 {
      line-height: 200%;
      position: relative;
      margin: 0;
      margin-bottom: 1.75rem;
      text-transform: uppercase;
      letter-spacing: 1px;
      font-size: 14px;      
      &:after {
        content: "";
        background: $red;
        position: absolute;
        right: 0;
        bottom: -5px;
        width: 32px;
        height: 6px;
      }
    }
  }
  &__img {        
    position: relative;
    background: white;
    transition: 350ms ease;
    .gatsby-image-wrapper {
      box-shadow: 0 0.063em 0.313em 0 rgba(0,0,0,.07), 0 0.438em 1.063em 0 rgba(0,0,0,.1);         
    }
    &-video {            
      z-index: -1;       
      position: absolute;      
      top: 0;
      bottom: 0;       
      opacity: 0;   
      transition: 350ms ease;
    }
    &--has-video {
      &:hover {
        background: none;
        .card__img-video{
          z-index: 2;
          opacity: 1;   
        }
        .gatsby-image-wrapper {        
          display: none;
          z-index: -1;
        }               
      }
    }
  }
    
  &:nth-of-type(even) {
    flex-direction: row-reverse;        
    .btn {
      margin-left: 0;
      margin-right: 0.35rem;
    }
    .card__content {
      text-align: left;      
      padding-left: 0;
      padding-right: $card-padding;
      h3:after {
        left: 0;
      }
    }    
  }
}

@media(max-width: 620px) {
  .header {
    grid-template-columns: 80px 1fr;
    .btn {
      margin-left: 0.45rem;
      margin-top: 0.45rem;
    }
    &__content {
      font-size: 16px;  
      max-width: 400px;
      justify-self: end;
    }
  }
}

@media(max-width: 500px) {
  .btn {
    padding: 3px 6px;
  }
  .btn--big {    
    padding: 7px 14px;
  }  
  .card {
    display: block;
    .btn {
      margin-left: 0;
      margin-right: 0.35rem;
    }
    &__img {            
      margin-bottom: 1.75rem;      
      &-gif {
        display: none;        
      }
      &--has-video {
        &:hover {
          .gatsby-image-wrapper {          
            display: block;
            opacity: 0;
          }
          .card__img-video {
            display: block;    
            z-index: 1;                  
          }
        }
      }
    }
    &__content {
      text-align: left;
      border-top: 0;      
      padding: 0;
      h3:after {
        left: 0;
      }
    }
  }
}


@media(max-width: 360px) {
  .header {
    display: block;
    &__title {            
      display: block;
      padding-bottom: 50px;    
      h1 {
        position: relative;
        display: inline;
        top: 0;
        left: 0;
        transform: rotate(0);
      }        
    }
    &__content {        
      margin: 0 auto;                
    }
  }

}

